force-app/main/default/objects/Titulo_Academico__c/Titulo_Academico__c.object-meta.xml
<CustomObject>
    <description>Objeto encargado de llevar el registro del historial académico de los profesionales.</description>
    <label>Título Académico</label>
    <nameField>
        <label>Nombre de la Institución</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Títulos Académicos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>