force-app/main/default/objects/Titulo_Academico__c/fields/Fecha_de_Culminacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Culminacion__c</fullName>
    <description>Fecha de culminación de la institución educativa.</description>
    <label>Fecha de Culminación</label>
    <required>true</required>
    <type>Date</type>
</CustomField>