force-app/main/default/objects/Titulo_Academico__c/fields/Nivel_Academico__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Academico__c</fullName>
    <description>Campo del nivel académico que cursó.</description>
    <label>Nivel Académico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licenciatura</fullName>
            </value>
            <value>
                <fullName>Diplomado</fullName>
            </value>
            <value>
                <fullName>Especialidad</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>