force-app/main/default/objects/Titulo_Academico__c/fields/Nombre_titulo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_titulo__c</fullName>
    <label>Nombre título</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>