force-app/main/default/objects/Titulo_Academico__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <description>Historial académico del profesional.</description>
    <label>Profesional</label>
    <referenceTo>Empleado__c</referenceTo>
    <relationshipName>Historiales_Academico</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>